--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./css/responsive.css">
     <title>Clinick</title>
-    <script defer="defer" src="/static/js/main.45ff6048.js"></script>
-    <link href="/static/css/main.e6c13ad2.css" rel="stylesheet">
+    <script defer="defer" src="./static/js/main.45ff6048.js"></script>
+    <link href="./static/css/main.e6c13ad2.css" rel="stylesheet">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
